# mahjong-cpp

./: .gitignore  CMakeLists.txt  setup.py
PythonApplication1_kensyou/: MahjongCpp.py  PythonApplication1_kensyou.py  PythonApplication1_kensyou.pyproj  m2.py  main.py
src/mahjong/: expectedvaluecalculator.cpp  expectedvaluecalculator.hpp  handseparator.cpp
src/mahjong/types/: hand.hpp  tile.hpp
src/pythonlib/: CMakeLists.txt  pythonlib_module.cpp
